add full font support and readme

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve",
-    "watch": "webpack --mode development --watch"
+    "start": "webpack serve"
   },
   "author": "",
   "license": "ISC",
